--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     </header>
     <main>
         <p>At Alberto Pichardo Tennis Pro Tennis School, we are passionate about helping players of all ages and skill levels improve their game. Our state-of-the-art facilities and experienced coaches make learning tennis fun and effective.</p>
-        <p>Founder of the school, Alberto Pichardo has over 30 years of experience coaching professional and amateur tennis players. He has been the Head Tennis Pro at Sports Illustrated Resorts Marina & Villas Cap Cana for many years, teaching mainy players in different levels.</p>
+        <p>Founder of the school, Alberto Pichardo has over 30 years of experience coaching professional and amateur tennis players. He has been the Head Tennis Pro at Sports Illustrated Resorts Marina & Villas Cap Cana for many years, teaching many players in different levels.</p>
     </main>
     <footer>
         <p>&copy; 2024 Alberto Pichardo Tennis Pro School. All rights reserved.</p>
