--- a/coaches.html
+++ b/coaches.html
@@ -16,7 +16,7 @@
             <img src="head_coach.jpg" alt="Head Coach">
             <p><strong>Name:</strong> Alberto Pichardo</p>
             <p><strong>Biography:</strong> Alberto has over 30 years of experience coaching professional and amateur tennis players. Alberto is passionate about developing players’ technical and strategic skills while fostering a love for the game.</p>
-            <p><strong></strong> As a professional player, he still competing in ITF International Master Tournaments. Alberto recently won a pretigious Copa Mastrolili, a competative ITF International tournament.</p>
+            <p><strong></strong> As a professional player, he still competing in ITF International Master Tournaments. Alberto recently won a pretigious Copa Mastrolili, a competative ITF International Tennis Tournament.</p>
         </section>
     </main>
     <footer>
