--- a/coaches.html
+++ b/coaches.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <section>
-            <h2>Head Professional Coach</h2>
+            <h2>Tennis Head Professional Coach</h2>
             <img src="head_coach.jpg" alt="Head Coach">
             <p><strong>Name:</strong> Alberto Pichardo</p>
             <p><strong>Biography:</strong> Alberto has over 30 years of experience coaching professional and amateur tennis players. Alberto is passionate about developing players’ technical and strategic skills while fostering a love for the game.</p>
